# Cargo.toml (Definitieve Versie)
[package]
name = "tsqc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daan Starre <daan.starre@example.com>"]

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
# Versie 0.21.2 met 'macros' feature voor Python 3.12 compatibiliteit.
pyo3 = { version = "0.21.2", features = ["macros"] }
bitvec = "1.0.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = { version = "1.10.0", optional = true }

[features]
default = ["parallel_mcts"]
parallel_mcts = ["dep:rayon"]

[dev-dependencies]
approx = "0.5.1"