# pyproject.toml (Definitieve Versie met src-layout)
[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tsqc"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
    { name = "Daan Starre", email = "daan.starre@example.com" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tsqc._native"
# CORRECTIE: Vertel maturin waar de Python source code staat.
python-source = "src"
version = { path = "Cargo.toml" }