# pyproject.toml
# DEFINITIEVE FINALE VERSIE

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "tsqc"
dynamic = ["version"]
authors = [ {name = "Daan Starre", email = "daan.starre@example.com"} ]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

# De 'rich' dependency is terecht weer aanwezig.
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0"
]

[project.scripts]
tsqc = "tsqc.cli:app"

[tool.maturin]
module-name = "tsqc._native"
python-source = "src"
features = ["pyo3/extension-module", "parallel_mcts"]